# agl-green-endoscopy-dashboard

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
.venvs/django/: pyvenv.cfg
.venvs/django/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
green_endoscopy_dashboard/: manage.py  requirements.txt
green_endoscopy_dashboard/agl_base_db/: apps.py
green_endoscopy_dashboard/agl_base_db/data/: __init__.py
green_endoscopy_dashboard/agl_base_db/migrations/: 0001_initial.py
green_endoscopy_dashboard/agl_base_db/models/: __init__.py  center.py  information_source.py
green_endoscopy_dashboard/green_endoscopy_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
green_endoscopy_dashboard/product_emissions/: apps.py  center_product_utils.py  serializers.py  views.py
green_endoscopy_dashboard/product_emissions/data/: __init__.py
green_endoscopy_dashboard/product_emissions/migrations/: 0001_initial.py  0002_productweight_name.py  0003_alter_referenceproduct_product_group.py  0004_alter_productmaterial_product.py  0005_referenceproduct_emission_factor_package_and_more.py  0006_alter_referenceproduct_emission_factor_total.py  0007_alter_referenceproduct_product_group.py  0008_centerproduct.py  0009_centerproduct_center.py
green_endoscopy_dashboard/product_emissions/models/: __init__.py  center_product.py  center_resource.py  center_waste.py  product_material.py  product_weight.py  reference_product.py  transport_route.py
green_endoscopy_dashboard/product_emissions/templates/: base.html  emission_summary_table.html  home.html  (+3 more)
(+30 files in other folders)
